# hyquic

./: README.md
kernel/: .gitignore  Makefile.am  build.sh  run.sh
kernel/handshake/: Makefile.am  hyquic.c  hyquic_api.c  hyquic_intercom.h  hyquic_interface.c
kernel/handshake/netinet/: hyquic.h  quic.h
kernel/include/uapi/linux/: hyquic.h  quic.h
kernel/net/quic/: Makefile  cong.h  connection.h  crypto.h  debug.h  frame.c  frame.h  hashtable.h  hybrid.c  hybrid.h  hybrid_frame_format_spec.h  input.h  intercom.h  number.h  output.c  output.h  packet.c  packet.h  path.h  pnmap.h  protocol.h  socket.c  socket.h  stream.h  timer.h
user/: .gitignore  CMakeLists.txt  buffer.hpp  debug.hpp  errors.hpp  frame_format_spec.hpp  hyquic.hpp  hyquic_client.hpp  hyquic_server.hpp  intercom.hpp  sock_interface.hpp  tmp.cpp
user/benchmarks/: bandwidth.cpp  benchmark.sh  client_benchmark.sh  debug_benchmark.sh  run_benchmark.sh  run_benchmarks.sh  server_benchmark.sh  single_benchmark.sh
user/examples/: stream_extension.hpp  stream_frame_utils.hpp  stream_injector.hpp  stream_utils.hpp
user/tests/: buffer_test.cpp  ffs_test.cpp  run_test.sh  run_test_sudo.sh  sample_test.cpp  stream_ext_test.cpp
user/tests/keys/: ca_cert_pkey.sh
